@@ -1,39 +1,30 @@
 package cn.sichu.graduate_practice.array;
 
-import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Deque;
+import java.util.Arrays;
 import java.util.List;
 
 /**
- * @see <a href = "https://leetcode-cn.com/problems/permutations/">46. 全排列</a>
- * @see <a href = "https://leetcode.com/problems/permutations/">46. Permutations</a>
+ * @see <a href = "https://leetcode-cn.com/problems/permutations-ii/">47. 全排列 II</a>
+ * @see <a href = "https://leetcode.com/problems/permutations-ii/">47. Permutations II</a>
  * @author sichu
  * @date 2022/03/19
  */
-public class Permutations {
-    /**
-     * Time: O(n * n!)
-     * <p>
-     * Space: O(n * n!)
-     * 
-     * @param nums
-     * @return
-     */
-    public List<List<Integer>> permute(int[] nums) {
+public class PermutationsII {
+    public List<List<Integer>> permuteUnique(int[] nums) {
         List<List<Integer>> res = new ArrayList<List<Integer>>();
-
-        // boolean 初始就是false
         boolean[] used = new boolean[nums.length];
-        backtrack(res, new ArrayDeque<Integer>(), nums, used, 0);
+        Arrays.sort(nums);
+        backtrack(res, new ArrayList<Integer>(), nums, used, 0);
         return res;
     }
 
-    private void backtrack(List<List<Integer>> res, Deque<Integer> path, int[] nums, boolean[] used, int depth) {
+    private void backtrack(List<List<Integer>> res, List<Integer> path, int[] nums, boolean[] used, int depth) {
         if (depth == nums.length) {
             res.add(new ArrayList<Integer>(path));
             return;
         }
+
         for (int i = 0; i < nums.length; i++) {
             if (used[i]) {
                 continue;
@@ -41,9 +32,12 @@ public class Permutations {
             path.add(nums[i]);
             used[i] = true;
             backtrack(res, path, nums, used, depth + 1);
-            path.removeLast();
+            path.remove(path.size() - 1);
             used[i] = false;
 
+            while (i < nums.length - 1 && nums[i] == nums[i + 1]) {
+                i++;
+            }
         }
     }
 }
